Fixed tab mess caused by jquery upgrade, reogranised jquery styling, fixed three horizontal scrollbar issue in left panel

--- a/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
+++ b/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
@@ -156,7 +156,6 @@
 			top:28px;
 		    position:absolute;
 		    bottom:0px; left:0px; right:0px;
-			
 		}
 		
 		
@@ -188,7 +187,6 @@
 	
     
 	    #left_panel_tab_list, .left_panel_top{
-
 			background:#5D6672; /* Old browsers */
 			background:hsl(210,10%,80%);
 			background-image:-moz-linear-gradient(top, rgba(255,255,255,.4) 0%, rgba(255,255,255,.1) 100%); /* FF3.6+ */
@@ -245,8 +243,15 @@
 	
     
 	        #left_panel_tab_list li, #annotation_tabs_list li {
-	            border-right:solid 1px hsl(210,20%,75%);
+	            border:none;
+				border-right:solid 1px hsl(210,10%,75%);
 				-webkit-box-shadow:1px 0 0 rgba(255,255,255,.3);
+				top:0px;
+				-webkit-box-shadow:1px 0 0  rgba(255,255,255,0.3); /* Saf3.0+, Chrome */
+				   -moz-box-shadow:1px 0 0  rgba(255,255,255,0.3); /* FF3.5+ */
+				        box-shadow:1px 0 0  rgba(255,255,255,0.3); /* Opera 10.5, IE 9.0 */
+				    filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=1px, OffY=0, Color='#fff'); /* IE6,IE7 */
+				-ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=1px, OffY=0, Color='#fff')"; /* IE8 */ 
 	        }
         
         
@@ -261,7 +266,6 @@
 		            border-radius:inherit;
 		            line-height: 2em;
 		            font-weight:bold;
-					
 	            }
     
 	
@@ -319,7 +323,6 @@
 	#left_panel .toolbar {
 		left:0px;
 		right:0px;
-		min-width:300px;
 	}
 	
     
@@ -487,19 +490,14 @@
     /* Right & Center Panel Headers */
     
     #center_panel_header, #annotation_tabs_list, .one_column_header {
-        
-		
-		background:hsl(215,10%,80%); /* Old browsers */
+  		background:hsl(215,10%,80%); /* Old browsers */
 		background-image:-moz-linear-gradient(top, rgba(255,255,255,.3) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
 		background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.3)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
 		background-image:-webkit-linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
 		background-image:-o-linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(255,255,255,0) 100%); /* Opera11.10+ */
 		background-image:-ms-linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
 		filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='rgba(255,255,255,.3)', endColorstr='rgba(255,255,255,0)',GradientType=0 ); /* IE6-9 */
-		background:linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(255,255,255,0) 100%); /* W3C */ 
-		
-		
-		
+		background:linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(255,255,255,0) 100%); /* W3C */ 		
 		-webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,0.2); /* Saf3.0+, Chrome */
 		-moz-box-shadow:inset 0 1px 0 rgba(255,255,255,0.2); /* FF3.5+ */
 		box-shadow:inset 0 1px 0 rgba(255,255,255,0.2); /* Opera 10.5, IE 9.0 */
@@ -511,6 +509,7 @@
    
    #center_panel_header, #annotation_tabs_list {
    		border-top: solid 1px hsl(210,15%,35%);
+		height:31px;
    }
 
 
@@ -519,6 +518,7 @@
     #annotation_tabs_list{
         border-bottom: solid 1px hsl(210,10%,55%); 
         border-right:solid 1px hsl(210,10%,100%);
+		
     }
     
         #annotation_tabs_list li {
@@ -1195,7 +1195,6 @@
     /* Center Panel Header */   
     
     #center_panel_header {
-        height:31px;
         position:absolute;
         top:0px;
         left:0px;
@@ -1203,6 +1202,11 @@
         right:0px;
         border-bottom:solid 1px rgba(0,0,0,.4);
 		-webkit-box-shadow:inset 1px 0 0 rgba(255,255,255,.2);
+		-webkit-box-shadow:    inset 1px 0 0 rgba(255,255,255,.2); /* Saf3.0+, Chrome */
+		   -moz-box-shadow:    inset 1px 0 0 rgba(255,255,255,.2); /* FF3.5+ */
+		        box-shadow:    inset 1px 0 0 rgba(255,255,255,.2); /* Opera 10.5, IE 9.0 */
+		    filter: progid:DXImageTransform.Microsoft.dropshadow(OffX=, OffY=, Color='inset 1px 0 0 rgba(255,255,255,.2)'); /* IE6,IE7 */
+		-ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=, OffY=, Color='inset 1px 0 0 rgba(255,255,255,.2)')"; /* IE8 */ 
     } 
     
     
