--- a/components/tools/OmeroWeb/omeroweb/webgateway/static/3rdparty/jquery.jstree/themes/default/style.css
+++ b/components/tools/OmeroWeb/omeroweb/webgateway/static/3rdparty/jquery.jstree/themes/default/style.css
@@ -15,7 +15,6 @@
  
  .jstree-default > ul { 
  	//background: hsl(220,20%,95%);
- 	width:300px;
 	font-size:1.2em;
  	padding:10px 0 !important;
  	}
