--- a/components/tools/OmeroWeb/omeroweb/webgateway/static/webgateway/css/ome.header.css
+++ b/components/tools/OmeroWeb/omeroweb/webgateway/static/webgateway/css/ome.header.css
@@ -945,6 +945,7 @@
     left:0px; top:0px; bottom:0px;right:0px;
     width:350px;
     border-left: none;
+	min-width:300px;
 }
 
 	.left_panel_inner {
